# ddos-detector

./: .gitignore  README.md  csv_to_pq.py  ddos_data_preprocessor.py  main.py  pyproject.toml  requirements.txt
M1/: .dockerignore  Dockerfile  LICENSE  README.md  ddos_data_module.py  pyproject.toml  requirements.txt
M3/: augmentation.ipynb  feature_engineering.ipynb
M4/: neural_network.ipynb  tree_based.ipynb
M5/catboost/: main.py
M5/neural_network/: neural-network.ipynb
M6/: ensemble.py  eval_catboost.py  eval_catboost_experiment.py  eval_lightgbm.py  sweep.py  sweep_catboost_experiment.py  sweep_lightgbm.py  sweep_xgb.py
