[tool.poetry]
name = "ddos-detector"
version = "0.1.0"
description = "Semester project for Advanced Data Analysis Methods Laboratory"
authors = ["jahudak <100032984+jahudak@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

packages = [
    { include = "data", from = "src"}, 
    { include = "charts", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-2.4.1%2Bcpu-cp312-cp312-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-2.4.1%2Bcpu-cp312-cp312-win_amd64.whl", markers = "sys_platform == 'win32'"}
]
lightning = "^2.4.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^6.0.0"
prettytable = "^3.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
